@@ -19,6 +19,8 @@
   The existing variable, org-web-track-use-curl, can now be a string that specifies the path for the cURL executable.
 - =org-web-track-test-selector= has been removed
   Consider using =org-web-track-retrieve-values= which has almost the same argument list, instead.
+- Filters in =org-web-track-selectors-alist= are no longer in effect
+  The filters, which were originally intended to serve as data processors against the values obtained by the selector, are now defunct. Please consider incorporating this process directly into the selector itself.
 
 * Version 0.0.3 on 2024-07-19
 :PROPERTIES:
